welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
while (!estFaceMur()) {
	if (!porteBiscuit()) {
		retourne();
		while (!estSurBiscuit() | estFaceMur() {
			avance();
		} 
		prendBiscuit();
	} else { 
		retourne();
		while (!estSurBiscuit()) {
			avance();
		} 
		recule();
		
		
	}
}
droite();
avance();
gauche();
avance();